kubernetes/habit-tracker/habit-tracker-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: habit-tracker
  name: habit-tracker-api
  labels:
    app: habit-tracker-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: habit-tracker-api
  template:
    metadata:
      labels:
        app: habit-tracker-api
    spec:
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          effect: "NoExecute"
          tolerationSeconds: 0
      containers:
        - name: habit-tracker-api
          image: ghcr.io/reidmason/habit-tracker-api:0.1.3
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: habit-tracker-storage
              mountPath: /app/data
      volumes:
        - name: habit-tracker-storage
          persistentVolumeClaim:
            claimName: habit-tracker-pvc

---
apiVersion: v1
kind: Service
metadata:
  namespace: habit-tracker
  name: habit-tracker-api
spec:
  selector:
    app: habit-tracker-api
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 8000
