kubernetes/habit-tracker/habit-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: habit-tracker
  name: habit-tracker
  labels:
    app: habit-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: habit-tracker
  template:
    metadata:
      labels:
        app: habit-tracker
    spec:
      containers:
        - name: habit-tracker
          image: ghcr.io/reidmason/habit-tracker:0.3.3
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: habit-tracker-storage
              mountPath: /app/data
      volumes:
        - name: habit-tracker-storage
          persistentVolumeClaim:
            claimName: habit-tracker-pvc

---
apiVersion: v1
kind: Service
metadata:
  namespace: habit-tracker
  name: habit-tracker
spec:
  selector:
    app: habit-tracker
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 8000
