kubernetes/habit-tracker/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: habit-tracker
  namespace: habit-tracker
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`habit-kube.skippythesnake.com`)
      kind: Rule
      services:
        - name: habit-tracker
          port: 80
